<resources>
    <string name="app_name">FanDome</string>
    <string name="post_fandome">FANDOME:</string>
    <string name="action_logout">Log Out</string>
    <string name="post">Post</string>
    <string name="postHint">What\'s up, tell us about it!</string>
    <string name="userimage">UserImage</string>
    <string name="username">Username</string>
    <string name="sign_in_with_username_or_email">Sign in with username or email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="name">Name</string>
</resources>