<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_gradient"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">


    <TextView
        android:id="@+id/usernameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/usernameInputBox"
        app:layout_constraintStart_toStartOf="@+id/usernameInputBox"
        app:layout_constraintTop_toBottomOf="@id/appTitle"
        android:text="@string/username" />

    <EditText
        android:id="@+id/usernameInputBox"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/edittextview_border"
        android:hint="@string/sign_in_with_username_or_email"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#A1FFFFFF"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/usernameTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/passwordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/usernameInputBox"
        app:layout_constraintBottom_toTopOf="@+id/passwordInputBox"
        app:layout_constraintStart_toStartOf="@+id/passwordInputBox"
        android:text="@string/password" />

    <EditText
        android:id="@+id/passwordInputBox"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/edittextview_border"
        android:hint="@string/enter_password"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#A1FFFFFF"
        android:textSize="12sp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTitle" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="85dp"
        android:background="@drawable/rounded_button_bg"
        android:text="@string/login"
        android:textColor="#132274"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputBox" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/rounded_button_bg"
        android:text="@string/register"
        android:textColor="#1B2666"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signUpButton" />

    <ImageView
        android:id="@+id/fandomeIcon"
        android:layout_width="147dp"
        android:layout_height="136dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_home_feed_icon_24" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:fontFamily="@font/courgette_regular"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>