<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/main_blue_light"
    tools:context=".activities.ComposeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/compose_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="2dp"
        android:background="@color/main_blue_light"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="2dp"
        app:navigationIcon="@drawable/ic_baseline_close_24">

        <Button
            android:id="@+id/btn_Post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector_post"
            android:text="@string/post"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:enabled="false"/>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/iv_UserImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/circular_profile_image"
        android:scaleType="centerCrop"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/compose_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_baseline_person_24"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/userimage" />

    <TextView
        android:id="@+id/tv_UserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iv_UserImage"
        app:layout_constraintTop_toBottomOf="@id/compose_toolbar"
        tools:text="ThePrime" />
    <Button
        android:id="@+id/btn_addFandome"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:background="@drawable/button_selector_add"
        android:drawableTop="@drawable/ic_home_feed_icon_24"
        android:elevation="5dp"
        android:paddingTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/compose_toolbar"
        app:layout_constraintEnd_toStartOf="@id/btn_addImage"
        android:enabled="false"/>
    <Button
        android:id="@+id/btn_addImage"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:background="@drawable/button_selector_add"
        android:drawableTop="@drawable/ic_baseline_image_24"
        android:drawableTint="@color/colorWhite"
        android:elevation="5dp"
        android:paddingTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/compose_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        android:enabled="false"/>

    <EditText
        android:id="@+id/et_postBody"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="textMultiLine"
        android:hint="@string/postHint"
        android:ems="10"
        android:gravity="start|top"
        android:background="@color/colorWhite"
        android:textColor="@android:color/black"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_UserImage" />
    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/et_postBody"
        app:layout_constraintEnd_toEndOf="@id/et_postBody"
        app:layout_constraintBottom_toBottomOf="@id/et_postBody"
        android:layout_marginBottom="30dp"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/iv_PostImage"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/colorWhite"
        android:scaleType="fitCenter"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/et_postBody"
        tools:srcCompat="@tools:sample/avatars" />
    <Button
        android:id="@+id/btn_close_image"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@android:color/holo_red_light"
        android:drawableTop="@drawable/ic_baseline_close_24"
        android:drawableTint="@color/colorWhite"
        android:elevation="5dp"
        android:paddingTop="2dp"
        android:layout_margin="6dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/iv_PostImage"
        app:layout_constraintStart_toStartOf="@id/iv_PostImage"/>

    <LinearLayout
        android:id="@+id/layout_addFandome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:baselineAligned="false"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:orientation="horizontal"
        android:background="@color/colorWhite"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_close"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@android:color/holo_red_light"
            android:drawableTop="@drawable/ic_baseline_close_24"
            android:drawableTint="@color/colorWhite"
            android:elevation="5dp"
            android:paddingTop="2dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="20dp" />

        <TextView
            android:id="@+id/tv_HubLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/post_fandome"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            tools:text="FANDOME:" />

        <Spinner
            android:id="@+id/sp_fandome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>